YAML/petstore.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: petstore-upstream
            namespace: gloo-system
